# junk-drawer

./: GraphRAG.ipynb  LICENSE  app.py  docs_example.ipynb  docs_example_clusters.html  docs_example_sql copy.ipynb  docs_example_sql.ipynb  ho3_kg.html  load_or_build_index.ipynb  metadata_nodes.ipynb  policy_case_brief_report.ipynb  pyproject.toml  question_dataset.txt  rebel_index_ho3.html  sam_doc.ipynb  sam_notebook.html  scratch_pad copy.ipynb  scratch_pad.ipynb  splitter_test.html  splitter_test.ipynb
X_application_directory/: GraphRAG.ipynb  analyze.py  app.py  auto_evaluator.py  semantic_clustering.ipynb  utils.py
X_application_directory/callbacks/: clear_results.py  streamlit_debug_callback_handler.py
X_application_directory/pages/: 02_Autogen.py  03_Guided_Clustering.py  page_1.py  page_2.py  page_3.py  page_4.py  page_5.py  page_7.py  pages_2.py
X_application_directory/src/: analyze.py
X_application_directory/src/auto_eval/: text_utils.py
X_application_directory/src/docstore/: aws_s3.py  text_utils.py
X_application_directory/src/init_index/: Index_from_disk.py
X_application_directory/src/vectorstore/: fast_faiss.py
goal_ex/: assign_descriptions.py  iterative_cluster.py  propose_cluster_descriptions.py  recursive_cluster.py  utils.py  utils_performance.py
goal_ex/cover_algo/: __init__.py
src/: policy_index.py  prompts.py
src/ask_pdf/: ai.py  cache.py  gui.py  model.py  pdf.py  prompts.py  storage.py
src/docstore/: aws_s3.py  spacy_sentencizer.py
src/index_struct/: simple_vector_store.py
src/pdfstructure/: printer.py  source.py  utils.py
src/pdfstructure/analysis/: annotate.py  sizemapper.py  styledistribution.py
src/pdfstructure/hierarchy/: detectheader.py  headercompare.py  parser.py  traversal.py
src/pdfstructure/model/: document.py
src/text_prep/: custom_splitters.py  text_cleaning.py
src/utils/: gen_utils.py
src_index/: LGBMWithSHAP.py  agentchat_RetrieveChat.ipynb  agentchat_groupchat_research.ipynb  app.py  app_.py  app_chat.py  auto_coder.py  auto_scratch.py  autogen_langchain.ipynb  bertopic_testing copy.ipynb  clean_sample_ho3.py  custom_tools.py  ho3_sample_policy_index.py  html_components.py  html_templates.py  reddit_legal_clustering.ipynb  semantic_search.py  semantic_search_reddit_legal.ipynb  st_utils.py  summarizer_test.ipynb  top_n_tool.py  utils.py
src_index/groupchat/: download_and_inspect.py  plot_visualization.py
src_index/pages/: web_researcher.py
src_index/paper/: parse_text.py
src_index/streamlit_sql_sandbox/: constants.py  streamlit_demo.py
streamlit_sql_sandbox/: streamlit_demo.py  utils.py
